--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css">
     <!-- Required meta tags-->
     <meta charset="UTF-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <meta name="description" content="au theme template" />
-    <meta name="author" content="Hau Nguyen" />
-    <meta name="keywords" content="au theme template" />
+      <meta property="og:type" content="website">
+    <meta property="og:title" content="Strider Dashboard" />
+    <meta property="og:description" content="Strider is a Easy To Use Giveaway and Utilty Bot, Invite Now!" />
+    <meta property="og:url" content="https://dash.striderbot.net" />
+    <meta property="og:image" content="/logo.png" />
 
     <!-- Title Page-->
     <title>Strider Bot - Dashboard</title>
@@ -111,7 +114,7 @@
                     <div class="overview__inner">
                       <div class="overview-box clearfix">
                         <div class="icon">
-                          <i class="zmdi zmdi-shopping-cart"></i>
+                          <i class="zmdi zmdi-collection-bookmark"></i>
                         </div>
                         <div class="text">
                           <h2><%= data.channels %></h2>
@@ -424,7 +427,7 @@
                           </div>
                         </div>-->
                         <div class="au-chat-textfield">
-                            <3
+                            The Dashboard Has Been Rewritten
                         </div>
                       </div>
                     </div>
@@ -435,7 +438,7 @@
                 <div class="col-md-12">
                   <div class="copyright">
                     <p>
-                      Copyright © 2020. All rights reserved. 
+                      Copyright Stider © 2020. All rights reserved. 
                     </p>
                   </div>
                 </div>
