--- a/views/settings.ejs
+++ b/views/settings.ejs
@@ -7,12 +7,14 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <meta name="description" content="au theme template" />
-    <meta name="author" content="Hau Nguyen" />
-    <meta name="keywords" content="au theme template" />
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Strider Dashboard" />
+    <meta property="og:description" content="Strider is a Easy To Use Giveaway and Utilty Bot, Invite Now!" />
+    <meta property="og:url" content="https://dash.striderbot.net" />
+    <meta property="og:image" content="/logo.png" />
 
     <!-- Title Page-->
-    <title>Strider Bot - Dashboard</title>
+    <title>Strider - Dashboard</title>
 
     <!-- Fontfaces CSS-->
     <link href="/css/font-face.css" rel="stylesheet" media="all" />
