--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -132,7 +132,7 @@
                     <div class="overview__inner">
                       <div class="overview-box clearfix">
                         <div class="icon">
-                          <i class="zmdi zmdi-calendar-note"></i>
+                          <i class="zmdi zmdi-dns"></i>
                         </div>
                         <div class="text">
                           <h2><%= data.guilds %></h2>
