--- a/views/settings.ejs
+++ b/views/settings.ejs
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css">
     <!-- Required meta tags-->
     <meta charset="UTF-8" />
     <meta
@@ -131,7 +132,7 @@
                     <div class="overview__inner">
                       <div class="overview-box clearfix">
                         <div class="icon">
-                          <i class="zmdi zmdi-calendar-note"></i>
+                          <i class="zmdi zmdi-dns"></i>
                         </div>
                         <div class="text">
                           <h2><%= data.guilds %></h2>
