Beta 2 Updated Looks

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css">
     <!-- Required meta tags-->
     <meta charset="UTF-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <meta name="description" content="au theme template" />
-    <meta name="author" content="Hau Nguyen" />
-    <meta name="keywords" content="au theme template" />
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Strider Dashboard" />
+    <meta property="og:description" content="Strider is a Easy To Use Giveaway and Utilty Bot, Invite Now!" />
+    <meta property="og:url" content="https://dash.striderbot.net" />
+    <meta property="og:image" content="/logo.png" />
 
     <!-- Title Page-->
-    <title>Strider Bot - Dashboard</title>
+    <title>Strider - Dashboard</title>
 
     <!-- Fontfaces CSS-->
     <link href="css/font-face.css" rel="stylesheet" media="all" />
@@ -83,7 +86,7 @@
               <div class="row">
                 <div class="col-md-12">
                   <div class="overview-wrap">
-                    <h2 class="title-1">Strider Bot</h2>
+                    <h2 class="title-1">Strider Dashboard</h2>
                   </div>
                 </div>
               </div>
@@ -111,7 +114,7 @@
                     <div class="overview__inner">
                       <div class="overview-box clearfix">
                         <div class="icon">
-                          <i class="zmdi zmdi-shopping-cart"></i>
+                          <i class="zmdi zmdi-collection-bookmark"></i>
                         </div>
                         <div class="text">
                           <h2><%= data.channels %></h2>
@@ -129,7 +132,7 @@
                     <div class="overview__inner">
                       <div class="overview-box clearfix">
                         <div class="icon">
-                          <i class="zmdi zmdi-calendar-note"></i>
+                          <i class="zmdi zmdi-dns"></i>
                         </div>
                         <div class="text">
                           <h2><%= data.guilds %></h2>
