--- a/views/settings.ejs
+++ b/views/settings.ejs
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css">
     <!-- Required meta tags-->
     <meta charset="UTF-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <meta name="description" content="au theme template" />
-    <meta name="author" content="Hau Nguyen" />
-    <meta name="keywords" content="au theme template" />
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Strider Dashboard" />
+    <meta property="og:description" content="Strider is a Easy To Use Giveaway and Utilty Bot, Invite Now!" />
+    <meta property="og:url" content="https://dash.striderbot.net" />
+    <meta property="og:image" content="/logo.png" />
 
     <!-- Title Page-->
-    <title>Strider Bot - Dashboard</title>
+    <title>Strider - Dashboard</title>
 
     <!-- Fontfaces CSS-->
     <link href="/css/font-face.css" rel="stylesheet" media="all" />
@@ -96,8 +99,8 @@
                           <i class="zmdi zmdi-account-o"></i>
                         </div>
                         <div class="text">
-                          <h2><%= data.users %></h2>
-                          <span>Total Users</span>
+                          <h2><%= data.client.guilds.cache.get(data.guildID).members.cache.filter(member => !member.user.bot).size %></h2>
+                          <span>User Count</span>
                         </div>
                       </div>
                       <div class="overview-chart">
@@ -111,11 +114,11 @@
                     <div class="overview__inner">
                       <div class="overview-box clearfix">
                         <div class="icon">
-                          <i class="zmdi zmdi-shopping-cart"></i>
+                          <i class="zmdi zmdi-collection-bookmark"></i>
                         </div>
                         <div class="text">
-                          <h2><%= data.channels %></h2>
-                          <span>Channels</span>
+                          <h2><%= data.client.guilds.cache.get(data.guildID).name %></h2>
+                          <span>Server Name</span>
                         </div>
                       </div>
                       <div class="overview-chart">
@@ -129,11 +132,11 @@
                     <div class="overview__inner">
                       <div class="overview-box clearfix">
                         <div class="icon">
-                          <i class="zmdi zmdi-calendar-note"></i>
+                          <i class="zmdi zmdi-memory"></i>
                         </div>
                         <div class="text">
-                          <h2><%= data.guilds %></h2>
-                          <span>Servers</span>
+                          <h2><%= data.client.guilds.cache.get(data.guildID).members.cache.filter(member => member.user.bot).size %></h2>
+                          <span>Bots Count</span>
                         </div>
                       </div>
                       <div class="overview-chart">
