--- a/views/partials/nav-settings.ejs
+++ b/views/partials/nav-settings.ejs
@@ -55,10 +55,10 @@
                 <a href='/settings/<%= data.guildID %>'><i class="fas fa-cogs"></i>Bot Settings</a>
               </li>
               <li class="has-sub">
-                <a href='/infomation/<%= data.guildID %>'><i class="fas fa-user-plus"></i>Infomation</a>
+                <a href='/information/<%= data.guildID %>'><i class="fas fa-user-plus"></i>Information</a>
               </li>
               <li class="has-sub">
-                <a href='https://docs.striderbot.net/'><i class="fas fa-book"></i>Docs</a>
+                <a href='/logs/<%= data.guildID %>'><i class="fas fa-book"></i>Audit Logs</a>
               </li>
               <li class="has-sub">
                 <a href='https://discord.gg/saxSvhR7GP'><i class="fas fa-question"></i>Support</a>
