Audit Logs Start

--- a/views/logs.ejs
+++ b/views/logs.ejs
@@ -166,7 +166,30 @@
 
 <br><br><br>
 
-<h1>Coming Soon!</h1>
+<h3>Dashboard Logs</h3>
+<div class="row m-t-30">
+  <div class="col-md-12">
+      <!-- DATA TABLE-->
+      <div class="table-responsive m-b-40">
+          <table class="table table-borderless table-data3">
+              <thead>
+                  <tr>
+                      <th>Time</th>
+                      <th>User ID</th>
+                      <th>Username</th>
+                      <th>Action</th>
+                  </tr>
+              </thead>
+              <tbody>
+                  <tr>
+                      <td>Mon, Nov 16, 2020 2:42 PM</td>
+                      <td>1234567890123456</td>
+                      <td>Test</td>
+                      <td>Started Making Audit Logs</td>
+                  </tr>
+              </tbody>
+          </table>
+      </div>
                      
         
         
