--- a/views/logs.ejs
+++ b/views/logs.ejs
@@ -167,8 +167,10 @@
 <br><br><br>
 
 <h3>Dashboard Logs</h3>
+<br>
+<br>
 <div class="row m-t-30">
-  <div class="col-md-12">
+  <div class=".col-md-6 .offset-md-3">
       <!-- DATA TABLE-->
       <div class="table-responsive m-b-40">
           <table class="table table-borderless table-data3">
